Galeel | 1615 | Fixed - UI Issue: Alignment issue diagnosis section on dashboard

--- a/ui/app/styles/clinical/_patientDashboard.scss
+++ b/ui/app/styles/clinical/_patientDashboard.scss
@@ -285,6 +285,9 @@ table.dashboard-table {
 }
 
 .history-diagnosis {
+  .name {
+    width: 32%;
+  }
   .view {
     font-size: 12px;
   }
